Add log in and log out links

--- a/lib/xute_web/templates/layout/app.html.eex
+++ b/lib/xute_web/templates/layout/app.html.eex
@@ -12,7 +12,7 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
+            <%= render "sign_in_out.html", conn: @conn %>
           </ul>
         </nav>
         <a href="http://phoenixframework.org/" class="phx-logo">
