--- a/lib/xute_web/templates/page/secret.html.eex
+++ b/lib/xute_web/templates/page/secret.html.eex
@@ -5,3 +5,6 @@ You can only see this page if you are logged in.
 <p>
 You're logged in as <%= @current_user.username %>
 </p>
+<p>
+    <%= link "Log out", to: Routes.session_path(@conn, :logout), method: "post" %>
+</p>
